GoalTracker/force-app/main/default/objects/Profile_Update__c/Profile_Update__c.object-meta.xml
<CustomObject>
    <label>Profile Update</label>
    <nameField>
        <displayFormat>PU-{000000}</displayFormat>
        <label>Profile Update</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>