GoalTracker/force-app/main/default/objects/Profile_Update__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Profile Updates</relationshipLabel>
    <relationshipName>Profile_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>