GoalTracker/force-app/main/default/objects/Profile_Update__c/fields/New_Value_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Value_ID__c</fullName>
    <label>New Value ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>