GoalTracker/force-app/main/default/objects/Profile_Update__c/fields/New_Value_Long__c.field-meta.xml
<CustomField>
    <fullName>New_Value_Long__c</fullName>
    <label>New Value Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>