GoalTracker/force-app/main/default/objects/Profile_Update__c/fields/Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_Value__c</fullName>
    <label>Prior Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>