GoalTracker/force-app/main/default/objects/Profile_Update__c/fields/Prior_Value_ID__c.field-meta.xml
<CustomField>
    <fullName>Prior_Value_ID__c</fullName>
    <label>Prior Value ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>