GoalTracker/force-app/main/default/objects/Profile_Update__c/fields/Prior_Value_Long__c.field-meta.xml
<CustomField>
    <fullName>Prior_Value_Long__c</fullName>
    <label>Prior Value Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>